fix: add start command to base package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "backend"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run start --workspace=game"
   },
   "repository": {
     "type": "git",
