--- a/game/.eslintrc.yml
+++ b/game/.eslintrc.yml
@@ -5,10 +5,7 @@
     [
       "eslint:recommended",
       "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended"
+      "plugin:prettier/recommended",
     ],
-  rules: { 
-    "quotes": [2, "double"], 
-    "indent": ["warn", 2, { "SwitchCase": 1 }],
-  }
+  rules: { "quotes": [2, "double"], "indent": ["off", 2, { "SwitchCase": 1 }] },
 }
