map: using wfc to generate maps

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Team-9-HACKAUBG/RogueAI#readme",
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "wavefunctioncollapse": "^2.1.0"
   }
 }
