--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   },
   "homepage": "https://github.com/Team-9-HACKAUBG/RogueAI#readme",
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "dotenv": "^16.0.3"
+  },
+  "dependencies": {
+    "axios": "^1.3.4",
+    "openai": "^3.2.1"
   }
 }
