--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
-  "devDependencies": {},
   "scripts": {
+    "start": "npx tsc server.ts && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Team-9-HACKAUBG/RogueAI/issues"
   },
-  "homepage": "https://github.com/Team-9-HACKAUBG/RogueAI#readme"
+  "homepage": "https://github.com/Team-9-HACKAUBG/RogueAI#readme",
+  "dependencies": {
+    "@trpc/server": "^10.18.0"
+  }
 }
