--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,14 +2,14 @@
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "module": "ESNext",
+    "module": "CommonJS",
     "lib": ["ESNext"],
+    "esModuleInterop": true,
     "moduleResolution": "Node",
     "strict": true,
     "sourceMap": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "esModuleInterop": true,
     "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -17,5 +17,5 @@
     "skipLibCheck": true,
     "noImplicitAny": true
   },
-  "include": ["*"]
+  "include": ["src"]
 }
