--- a/game/package.json
+++ b/game/package.json
@@ -23,6 +23,7 @@
     "@pixi/tilemap": "^4.0.0",
     "@trpc/client": "^10.18.0",
     "gsap": "^3.11.4",
+    "pixi-viewport": "^5.0.1",
     "pixi.js": "^7.1.1",
     "wavefunctioncollapse": "^2.1.0"
   }
