--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@trpc/server": "^10.18.0",
     "@types/node": "^18.15.11",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "sharp": "^0.32.0",
+    "sharpsheet": "^0.0.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
