fix: vite esbuild error

--- a/game/package.json
+++ b/game/package.json
@@ -22,6 +22,7 @@
     "@pixi/sound": "^5.0.0",
     "@pixi/tilemap": "^4.0.0",
     "@trpc/client": "^10.18.0",
+    "esbuild": "^0.17.14",
     "gsap": "^3.11.4",
     "pixi-viewport": "^5.0.1",
     "pixi.js": "^7.1.1",
