--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "ts-node src/server.ts",
+    "narrator": "ts-node src/api/elevenlabs_controller.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,8 +21,10 @@
   "dependencies": {
     "@trpc/server": "^10.18.0",
     "@types/node": "^18.15.11",
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "glob": "^8.0.3",
+    "openai": "^3.2.1",
     "sharp": "^0.32.0",
     "sharpsheet": "^0.0.8",
     "zod": "^3.21.4"
