--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "narrator": "ts-node src/api/elevenlabs_controller.ts",
+    "elevenlabs_setup": "ts-node src/api/elevenlabs_setup.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,11 +28,13 @@
     "openai": "^3.2.1",
     "sharp": "^0.32.0",
     "sharpsheet": "^0.0.8",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/glob": "^8.1.0",
+    "@types/uuid": "^9.0.1",
     "ts-node": "^10.9.1"
   }
 }
