--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@trpc/server": "^10.18.0",
     "@types/node": "^18.15.11",
     "axios": "^1.3.4",
+    "concat-stream": "^2.0.0",
     "cors": "^2.8.5",
     "glob": "^8.0.3",
     "openai": "^3.2.1",
@@ -32,6 +33,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/concat-stream": "^2.0.0",
     "@types/cors": "^2.8.13",
     "@types/glob": "^8.1.0",
     "@types/uuid": "^9.0.1",
