--- a/game/package.json
+++ b/game/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "@pixi/sound": "^5.0.0",
     "@pixi/tilemap": "^4.0.0",
+    "@pixi/ui": "^0.7.0",
     "@trpc/client": "^10.18.0",
-    "esbuild": "^0.17.14",
     "astar-typescript": "^1.2.6",
+    "esbuild": "^0.17.14",
     "gsap": "^3.11.4",
     "pixi-viewport": "^5.0.1",
     "pixi.js": "^7.1.1",
