fix: major refactoring and scene implementing

--- a/game/.eslintrc.yml
+++ b/game/.eslintrc.yml
@@ -13,5 +13,6 @@
       "indent": ["off", 2, { "SwitchCase": 1 }],
       "@typescript-eslint/no-explicit-any": "off",
       "@typescript-eslint/ban-ts-comment": "off",
+      "@typescript-eslint/no-unused-vars": "off",
     },
 }
