--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "ts-node src/server.ts --watch",
     "narrator": "ts-node src/api/elevenlabs_controller.ts",
     "elevenlabs_setup": "ts-node src/api/elevenlabs_setup.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
